--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 # Basic Site Settings
 locale                   : "en-CA"
 site_theme               : "minimal_mistakes" # This is the theme used by academic pages
-title                    : "Gerd Bizi's Site"
+title                    : "Gerd Bizi"
 title_separator          : "-"
 name                     : &name "Gerd Bizi"
 description              : &description "Personal Site"
@@ -45,7 +45,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "gerd-bizi"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
