--- a/_config.yml
+++ b/_config.yml
@@ -123,7 +123,7 @@ atom_feed:
 
 
 # SEO Related
-google_site_verification :
+google_site_verification: "HNy2S0c5WcM1_z0Mjeo90zY6ipNzP_z4tHkLrWgQk6w"
 bing_site_verification   :
 alexa_site_verification  :
 yandex_site_verification :
