--- a/_config.yml
+++ b/_config.yml
@@ -118,8 +118,10 @@ staticman:
       options:
         format           : "iso8601" # "iso8601" (default), "timestamp-seconds", "timestamp-milliseconds"
 atom_feed:
-  hide                   : false     # change to true to hide the RSS feed in the footer
+  hide                   : true     # change to true to hide the RSS feed in the footer
   path                   : # blank (default) uses feed.xml
+footer:
+  hide                   : true  # Add this to hide the footer completely
 
 
 # SEO Related
