--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ author:
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : #
   impactstory      : # URL
-  orcid            : "https://orcid.org/0000-0001-5311-7569"
+  orcid            : # "https://orcid.org/0000-0001-5311-7569"
   semantic         : # URL
   pubmed           : # URL
   researchgate     : # URL
