--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.png"
   name             : "Gerd Bizi"
   pronouns         : "(he/him)"  
-  bio              : "ML + Bio"
+  bio              : "ML for Biology"
   location         : "Toronto, CA"
   employer         : "University of Toronto"
   uri              : # URL
