--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
     url: /projects/
 
   - title: "Blog Posts"
-    url: /blog_posts
+    url: /blog_posts/
     
   - title: "CV"
     url: /cv/
