--- a/_config.yml
+++ b/_config.yml
@@ -230,6 +230,9 @@ collections:
   blog:
     output: true
     permalink: /:collection/:path/
+  projects:
+    output: true
+    permalink: /:collection/:path/
   news:
     output: true
     permalink: /:collection/:path/
@@ -246,7 +249,7 @@ defaults:
       author_profile: true
       read_time: true
       comments: true
-      share: true
+      share: false
       related: true
   # _pages
   - scope:
@@ -262,7 +265,7 @@ defaults:
     values:
       layout: single
       author_profile: true
-      share: true
+      share: false
       comments: true
   # _publications
   - scope:
@@ -271,7 +274,7 @@ defaults:
     values:
       layout: single
       author_profile: true
-      share: true
+      share: false
       comments: true
   # _portfolio
   - scope:
@@ -280,7 +283,7 @@ defaults:
     values:
       layout: single
       author_profile: true
-      share: true
+      share: false
       comment: true
   # _talks
   - scope:
@@ -289,8 +292,8 @@ defaults:
     values:
       layout: talk
       author_profile: true
-      share: true
-    # _blog
+      share: false
+  # _blog
   - scope:
       path: ""
       type: blog
@@ -299,8 +302,17 @@ defaults:
       author_profile: true
       read_time: true
       comments: true
-      share: true
+      share: false
       related: true
+  # _projects
+  - scope:
+      path: ""
+      type: projects
+    values:
+      layout: single
+      author_profile: true
+      share: false
+      comments: true
 
 
 # Sass/SCSS
