--- a/_config.yml
+++ b/_config.yml
@@ -249,7 +249,7 @@ defaults:
       author_profile: true
       read_time: true
       comments: true
-      share: false
+      share: true
       related: true
   # _pages
   - scope:
@@ -265,7 +265,7 @@ defaults:
     values:
       layout: single
       author_profile: true
-      share: false
+      share: true
       comments: true
   # _publications
   - scope:
@@ -274,7 +274,7 @@ defaults:
     values:
       layout: single
       author_profile: true
-      share: false
+      share: true
       comments: true
   # _portfolio
   - scope:
@@ -283,7 +283,7 @@ defaults:
     values:
       layout: single
       author_profile: true
-      share: false
+      share: true
       comment: true
   # _talks
   - scope:
@@ -292,8 +292,8 @@ defaults:
     values:
       layout: talk
       author_profile: true
-      share: false
-  # _blog
+      share: true
+    # _blog
   - scope:
       path: ""
       type: blog
@@ -302,16 +302,16 @@ defaults:
       author_profile: true
       read_time: true
       comments: true
-      share: false
+      share: true
       related: true
-  # _projects
+      # _projects
   - scope:
       path: ""
       type: projects
     values:
       layout: single
       author_profile: true
-      share: false
+      share: true
       comments: true
 
 
