--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ author:
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "gerdbizi.bsky.app" # Replace this with you Bluesky username
+  bluesky          : "gerdbizi.bsky.social" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
@@ -67,7 +67,7 @@ author:
   steam            : # Username
   telegram         : # URL
   tumblr           : # Username
-  twitter          : # Username for X / Twitter
+  twitter          : "gerdbizi"
   vine             : # Username
   weibo            : # Username
   wikipedia        : # Username
