fixed config file again

--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   pronouns         : "(he/him)"  
   bio              : "ML for Healthcare"
   location         : "Toronto, CA"
-  employer         : "University of Toronto\nUHN\nVector Institute"
+  employer         : "University of Toronto, UHN"
   uri              : # URL
   email            : "gerd.bizi@mail.utoronto.ca" 
 
